fixed (repository location has to be ´writable, i.e. url´s scheme needs to be ´file´)